--- a/src/package.json
+++ b/src/package.json
@@ -44,8 +44,10 @@
         "@fortawesome/fontawesome-free": "^6.2.1",
         "@hookform/resolvers": "^3.1.1",
         "@mui/icons-material": "^5.11.16",
+        "@mui/lab": "^5.0.0-alpha.138",
         "@mui/material": "^5.13.6",
         "@tanstack/react-query": "^4.29.17",
+        "@tanstack/react-query-devtools": "^4.32.0",
         "flowbite": "^1.6.2",
         "jquery": "^3.6.1",
         "pinia": "^2.0.28",
