--- a/src/package.json
+++ b/src/package.json
@@ -48,6 +48,7 @@
         "@mui/material": "^5.13.6",
         "@tanstack/react-query": "^4.29.17",
         "@tanstack/react-query-devtools": "^4.32.0",
+        "date-fns": "^2.30.0",
         "flowbite": "^1.6.2",
         "jquery": "^3.6.1",
         "pinia": "^2.0.28",
