--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
       - image: circleci/php:7.3-node-browsers
     steps:
       - checkout
+      - run: cd /src
       - run: sudo composer self-update --1
       - run: composer install -n --prefer-dist
       - run: npm ci
