--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,16 @@ jobs:
       - image: circleci/php:7.3-node-browsers
     steps:
       - checkout
-      - run: cd /src
       - run: sudo composer self-update --1
-      - run: composer install -n --prefer-dist
-      - run: npm ci
-      - run: npm run dev
+      - run: 
+          neme: Install Composer
+          command: composer install -n --prefer-dist
+          working_directory: src
+      - run: 
+          neme: npm CI
+          command: npm ci
+          working_directory: src
+      - run: 
+          neme: npm run dev
+          command: npm run dev
+          working_directory: src
