--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/php:7.3-node-browsers
     steps:
       - checkout
-      - run: sudo composer self-update
+      - run: sudo composer self-update --2.0.14
       - run: sudo composer --version
       - run: 
           name: Install Composer
