--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,10 @@ jobs:
       - image: circleci/php:7.3-node-browsers
     steps:
       - checkout
-      - run: sudo composer update
+      - run:
+          name: Composer Update
+          command: sudo composer update
+          working_directory: src
       - run: sudo composer --version
       - run: 
           name: Install Composer
