--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,6 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "@tailwindcss/forms": "^0.5.3",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
         "@types/react-router-dom": "^5.3.3",
@@ -30,18 +29,11 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^13.2.0",
-        "tailwindcss": "^3.2.4",
-        "ts-loader": "^9.4.3",
-        "vue": "^3.2.36",
-        "vue-loader": "^16.8.3",
-        "vue-router": "^4.1.6",
-        "vue-template-compiler": "^2.7.14",
-        "vuetify": "^3.1.1"
+        "ts-loader": "^9.4.3"
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@fortawesome/fontawesome-free": "^6.2.1",
         "@hookform/resolvers": "^3.1.1",
         "@mui/icons-material": "^5.11.16",
         "@mui/lab": "^5.0.0-alpha.138",
@@ -49,9 +41,7 @@
         "@tanstack/react-query": "^4.29.17",
         "@tanstack/react-query-devtools": "^4.32.0",
         "date-fns": "^2.30.0",
-        "flowbite": "^1.6.2",
         "jquery": "^3.6.1",
-        "pinia": "^2.0.28",
         "query-string": "^8.1.0",
         "react-hook-form": "^7.45.1",
         "zod": "^3.21.4"
